# BARINV_SCALE_CLEAN

./: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.defaults
components/espressif__esp_lvgl_port/: esp_lvgl_port.c
docs/: H9_POWER_WIRELESS_OTA_DESIGN.md
main/: CMakeLists.txt  backlight.c  backlight.h  board_config.h  buzzer.c  buzzer.h  cst820_touch.c  cst820_touch.h  hx711.c  hx711.h  i2c_bus.c  i2c_bus.h  idf_component.yml  lvgl_glue.c  lvgl_glue.h  main.c  power_mgr.c  power_mgr.h  st7701_panel.c  st7701_panel.h  tca9554.c  tca9554.h  ui.c  ui.h
